--- a/src/Aegon.Web/package.json
+++ b/src/Aegon.Web/package.json
@@ -20,6 +20,17 @@
   },
   "homepage": "https://github.com/Ronglin-kooboo/Aegon",
   "devDependencies": {
-    "gulp": "~3.6.0"
+    "gulp": "~3.6.0",
+    "browserify": "~3.41.0",
+    "gulp-browserify": "~0.5.0",
+    "gulp-uglify": "~0.2.1",
+    "gulp-concat": "~2.2.0",
+    "gulp-clean": "~0.2.4",
+    "gulp-less": "~1.2.3",
+    "gulp-rename": "~1.2.0",
+    "gulp-minify-css": "~0.3.1",
+    "gulp-livereload": "~1.2.0",
+    "tiny-lr": "0.0.5",
+    "gulp-ngmin": "~0.2.0"
   }
 }
