--- a/src/Aegon.Web/package.json
+++ b/src/Aegon.Web/package.json
@@ -31,6 +31,10 @@
     "gulp-minify-css": "~0.3.1",
     "gulp-livereload": "~1.2.0",
     "tiny-lr": "0.0.5",
-    "gulp-ngmin": "~0.2.0"
+    "gulp-ngmin": "~0.2.0",
+    "express": "~4.0.0"
+  },
+  "dependencies": {
+    "express": "~4.0.0"
   }
 }
